docs: add comprehensive data state security coverage
Add detailed analysis and implementation items for all three data states:

Data at Rest:
- Field-level encryption (AES-256-GCM)
- Document storage encryption
- Database SSL connection
- Backup encryption

Data in Transit:
- TLS 1.3 configuration
- PostgreSQL SSL (sslmode=verify-full)
- HSTS header configuration
- Secure cookie flags
- HTTP to HTTPS redirect

Data in Use (Memory):
- Secure byte array wiping
- ByteArrayOutputStream clearing
- char[] for passwords instead of String
- Heap dump protection
- JVM GC tuning for sensitive data

Security audit report now includes data state compliance matrix
showing current gaps and remediation recommendations.